--- a/src/main/webapp/scripts/app/main/main.html
+++ b/src/main/webapp/scripts/app/main/main.html
@@ -79,11 +79,26 @@
         </div>
         <div class="col-lg-6" style="height: 100%;" id="col-right">
             <ng-map zoom-to-include-markers="auto" style="height: 100%;">
-                <marker ng-repeat="spaceDTO in spaces"
+                <custom-marker ng-repeat="spaceDTO in spaces track by $index"
+                               id="custom-marker-{{$index}}"
                         position="[{{spaceDTO.space.lat}},{{spaceDTO.space.lng}}]"
                         data="{{data[$index]}}"
-                        on-click="showData()";
-                        title="pos: {{p.pos}}"></marker>
+                        on-click="vm.map.showInfoWindow('foo', 'custom-marker-'+$index)">
+                    <div class="marker">
+                        <iron-icon icon="maps:place" style="height: 28px; width: 28px; color: #E91E63;"></iron-icon>
+                    </div>
+                    <!--
+                    <div class="cm">
+                        700€
+                    </div>
+                    -->
+                </custom-marker>
+                <info-window id="foo" on-mouseover="vm.mouseover()">
+                    <div ng-non-bindable="">
+                        <img src="http://placehold.it/350x150"><br/>
+                        {{spaceDTO.space.name}}<br/>
+                    </div>
+                </info-window>
             </ng-map>
         </div>
     </div>
