--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -13,7 +13,6 @@
         <link rel="stylesheet" href="bower_components/angular-loading-bar/build/loading-bar.css" />
         <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
         <link rel="stylesheet" href="bower_components/AngularJS-Toaster/toaster.css"/>
-        <link rel="stylesheet" href="bower_components/ngmap/testapp/custom-marker.css">
         <!-- endbower -->
         <!-- endbuild -->
         <!-- build:css assets/styles/main.css -->
@@ -272,7 +271,7 @@
     <script src="scripts/components/entities/message/message.service.js"></script>
     <script src="scripts/components/entities/message/message.search.service.js"></script>
     <script src="bower_components/ngmap/build/scripts/ng-map.min.js"></script>
-    <script src="https://maps.google.com/maps/api/js?libraries=placeses,visualization,drawing,geometry,places"></script>
+    <script src="https://maps.google.com/maps/api/js?libraries=visualization,drawing,geometry,places"></script>
     <!-- endbuild -->
 </body>
 </html>
