--- a/src/main/webapp/scripts/app/entities/favorite/favorites.html
+++ b/src/main/webapp/scripts/app/entities/favorite/favorites.html
@@ -1,4 +1,4 @@
-<div>
+<!--<div>
     <h2 translate="project1App.favorite.home.title">Favorites</h2>
     <jh-alert></jh-alert>
     <div class="container-fluid">
@@ -6,7 +6,7 @@
             <div class="col-xs-4 no-padding-left">
                 <button class="btn btn-primary" ui-sref="favorite.new" >
                     <span class="glyphicon glyphicon-plus"></span>
-                    <span 
+                    <span
 class="hidden-xs"                        translate="project1App.favorite.home.createLabel">Create new Favorite
                     </span>
                 </button>
@@ -51,7 +51,7 @@ class="hidden-xs"                        translate="project1App.favorite.home.cr
                         <div class="btn-group flex-btn-group-container">
                             <button type="submit"
                                     ui-sref="favorite.detail({id:favorite.id})"
-                                    class="btn btn-info btn-sm"> 
+                                    class="btn btn-info btn-sm">
                                 <span class="glyphicon glyphicon-eye-open"></span>
                                 <span class="hidden-xs hidden-sm" translate="entity.action.view"></span>
                             </button>
@@ -63,7 +63,7 @@ class="hidden-xs"                        translate="project1App.favorite.home.cr
                             </button>
                             <button type="submit"
                                     ui-sref="favorite.delete({id:favorite.id})"
-                                    class="btn btn-danger btn-sm">                                    
+                                    class="btn btn-danger btn-sm">
                                 <span class="glyphicon glyphicon-remove-circle"></span>
                                 <span class="hidden-xs hidden-sm" translate="entity.action.delete"></span>
                             </button>
@@ -75,5 +75,41 @@ class="hidden-xs"                        translate="project1App.favorite.home.cr
     </div>
     <div class="text-center">
         <uib-pagination class="pagination-sm" total-items="totalItems" ng-model="page" ng-change="loadAll()"></uib-pagination>
+    </div>
+</div>-->
+
+<style>
+    .material{
+        box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
+        border:none;
+        overflow: hidden;
+        padding: 0;
+    }
+</style>
+
+<div class="container">
+    <div class="row">
+        <h4>Tus espacios favoritos:
+        Favoritos: {{filtered.length}}</h4>
+        <div class="col-sm-6 col-md-4"  ng-repeat="favorite in  filtered = (favorites | filter:filterExpr)">
+            <div class="thumbnail material">
+                <a ui-sref="space.detail({id:spaceDTO.space.id})">
+                    <!--<img data-ng-src="{{'data:' + space.imgContentType + ';base64,' + space.img}}" style="height: 200px; min-width: 100%;" ng-if="space.img"/>-->
+                    <img style="min-width: 100%;" src="http://placehold.it/350x150">
+                </a>
+<!--
+                <a ng-click="like(spaceDTO.space.id)" aria-label="More">
+                    <paper-fab ng-class="{true: 'fav2', false: 'fav'}[spaceDTO.liked == false]" icon="favorite-border" style="float: right; top: -30px; right: 18px; background-color: white;"></paper-fab>
+                </a>
+-->
+                <a ui-sref="space.detail({id:space.id})" class="decoration">
+                    <div class="caption">
+                        <h3>{{favorite.space.name}}</h3>
+                        <p style="color: rgba(0,0,0,0.54)">{{favorite.space.description}}</p>
+                        <p style="color: #43DBB9; text-align: right; font-size: 24px;font-weight: 600;">{{favorite.space.price}} €</p>
+                    </div>
+                </a>
+            </div>
+        </div>
     </div>
 </div>
