--- a/src/main/webapp/scripts/app/main/main.html
+++ b/src/main/webapp/scripts/app/main/main.html
@@ -125,6 +125,9 @@
                 .gm-style-iw > div{
                     padding-left: 20px;
                 }
+                .ng-map-info-window{
+                    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
+                }
             </style>
             <div class="text-center">
                 <uib-pagination class="pagination-sm" total-items="totalItems" ng-model="page" ng-change="loadAll()"></uib-pagination>
@@ -152,7 +155,7 @@
                         </div>
                     </a>
                 </custom-marker>
-                <info-window id="foo" on-mouseover="vm.mouseover()" >
+                <info-window id="foo" on-mouseover="vm.mouseover()">
                     <div>
                         <img src="http://placehold.it/150x150"><br/>
                         <a ui-sref="space.detail({id:selectedSpace.id})">{{selectedSpace.name}}</a><br/>
