--- a/src/main/webapp/scripts/app/main/main.html
+++ b/src/main/webapp/scripts/app/main/main.html
@@ -69,6 +69,7 @@
                     border:none;
                     overflow: hidden;
                     padding: 0;
+                    border-radius: 3px;
                 }
                 paper-fab[icon="favorite-border"] {
                     color: #F44336;
