--- a/src/main/webapp/scripts/app/entities/service/service-detail.html
+++ b/src/main/webapp/scripts/app/entities/service/service-detail.html
@@ -18,6 +18,14 @@
                     <span class="form-control-static">{{service.name}}</span>
                 </td>
             </tr>
+            <tr>
+                <td>
+                    <span translate="project1App.service.icon">Icon</span>
+                </td>
+                <td>
+                    <span class="form-control-static">{{service.icon}}</span>
+                </td>
+            </tr>
             </tbody>
         </table>
     </div>
