--- a/src/main/webapp/scripts/app/entities/service/service-dialog.html
+++ b/src/main/webapp/scripts/app/entities/service/service-dialog.html
@@ -19,6 +19,12 @@
                     ng-model="service.name"
                      />
         </div>
+        <div class="form-group">
+            <label class="control-label" translate="project1App.service.icon" for="field_icon">Icon</label>
+            <input type="text" class="form-control" name="icon" id="field_icon"
+                    ng-model="service.icon"
+                     />
+        </div>
 
     </div>
     <div class="modal-footer">
